# bond-lite-c

./: .gitignore  CMakeLists.txt  README.md
docs/: DESIGN.md  ENCODING.md
examples/: CMakeLists.txt  enum_example.c  nested_struct.c  simple_struct.c
include/: bond_buffer.h  bond_encoding.h  bond_lite.h  bond_reader.h  bond_types.h  bond_writer.h
src/: bond_buffer.c  bond_encoding.c  bond_reader.c  bond_writer.c
tests/: CMakeLists.txt  test_buffer.c  test_encoding.c  test_reader.c  test_roundtrip.c  test_writer_reader.c
